[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepanm"
version = "1.0.0"
description = "DeepANM: Deep Additive Noise Model for Causal Discovery using Gaussian Processes and Neural Spline Flows."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Manh Thai", email = "manht@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0"
]

[project.urls]
"Homepage" = "https://github.com/manhthai1706/CausalFlow"
"Documentation" = "https://github.com/manhthai1706/CausalFlow/blob/main/ARCH.md"
"Bug Tracker" = "https://github.com/manhthai1706/CausalFlow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepanm*"]
