[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepanm"
version = "1.0.0"
description = "DeepANM: Deep Additive Noise Model for Causal Discovery using Gaussian Processes and Neural Spline Flows."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Manh Thai", email = "manht@example.com" }
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "pytest>=7.0.0",
    "seaborn>=0.12.0",
    "requests>=2.28.0"
]

[project.urls]
"Homepage" = "https://github.com/manhthai1706/DeepANM"
"Documentation" = "https://github.com/manhthai1706/DeepANM/blob/main/ARCH.md"
"Bug Tracker" = "https://github.com/manhthai1706/DeepANM/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepanm*"]
